# bazel-museum

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  own_ranked.tsv
bazel_runner/: BUILD.bazel  bazel_runner.py  defs.bzl  hermetic_llvm.MODULE.bazel  rbe_build_status.md  rbe_test_status.md  run_builds.sh  zip.py
builds/: BUILD.bazel  defs.bzl  environments.bzl  overlays.bzl  platforms.bzl
builds/abseil_cpp/: BUILD.bazel
builds/avro-cpp/: BUILD.bazel
builds/basis_universal/: BUILD.bazel
builds/bazel/: BUILD.bazel
builds/boringssl/: BUILD.bazel
builds/briansmith_ring/: BUILD.bazel
builds/brotli/: BUILD.bazel
builds/brotli_go/: BUILD.bazel  parent.MODULE.bazel
builds/catch2/: BUILD.bazel
builds/ccronexpr/: BUILD.bazel
builds/copybara/: BUILD.bazel
builds/crow/: BUILD.bazel
builds/cxx/: BUILD.bazel
builds/cxxurl/: BUILD.bazel
builds/double_conversion/: BUILD.bazel
builds/effcee/: BUILD.bazel
builds/exprtk/: BUILD.bazel
builds/fftw/: BUILD.bazel
builds/flatbuffers/: BUILD.bazel
builds/ftxui/: BUILD.bazel
builds/gflags/: BUILD.bazel
builds/glog/: BUILD.bazel
builds/googletest/: BUILD.bazel  add_cc_load.patch
builds/gperftools/: BUILD.bazel
builds/grpc/: BUILD.bazel
builds/gsl-lite/: BUILD.bazel
builds/highs/: BUILD.bazel
builds/iceoryx/: BUILD.bazel
builds/icu/: BUILD.bazel
builds/iverilog/: BUILD.bazel
builds/json/: BUILD.bazel
builds/lcm/: BUILD.bazel
builds/libcreate/: BUILD.bazel
builds/libwebsockets/: BUILD.bazel
builds/opencc/: BUILD.bazel
builds/openexr/: BUILD.bazel
builds/ortools/: BUILD.bazel
builds/pcre2/: BUILD.bazel
builds/prometheus_cpp/: BUILD.bazel
builds/protobuf/: BUILD.bazel
builds/rules_multirun/: BUILD.bazel
builds/s2geometry/: BUILD.bazel
builds/sdl2_mixer/: BUILD.bazel
builds/simdutf/: BUILD.bazel
builds/squashfs-tools/: BUILD.bazel
builds/systemc/: BUILD.bazel
builds/universal-robots-client-library/: BUILD.bazel
builds/verilator/: BUILD.bazel
builds/zlib/: BUILD.bazel
builds/zziplib/: BUILD.bazel
kiss/: BUILD.bazel  defs.bzl  extension.bzl  kiss_runner.py  rbe_build_status.md  run_builds.sh
pipeline/: BUILD.bazel  __init__.py  classify.py  gather.py  github.py  model.py  netfetch.py
pipeline/sources/: __init__.py  bcr.py  jin.py  nicolov.py
projects/: BUILD.bazel  defs.bzl  run.sh
projects/abseil_cpp/: BUILD.bazel  project.bzl
projects/abseil_py/: BUILD.bazel  hermetic.MODULE.bazel  project.bzl
projects/aravis/: BUILD.bazel  project.bzl
projects/avro-cpp/: project.bzl
projects/basis_universal/: project.bzl
projects/bazel/: BUILD.bazel  project.bzl
projects/behaviortree_cpp/: BUILD.bazel  project.bzl
projects/benchmark/: BUILD.bazel  project.bzl
projects/boringssl/: BUILD.bazel  project.bzl
projects/briansmith_ring/: project.bzl
projects/brotli/: BUILD.bazel  module.MODULE.bazel  project.bzl
projects/brotli_go/: BUILD.bazel  project.bzl
projects/buildtools/: BUILD.bazel  project.bzl
projects/c-blosc2/: BUILD.bazel  project.bzl
projects/catch2/: BUILD.bazel  project.bzl
projects/ccronexpr/: project.bzl
projects/cctz/: BUILD.bazel  project.bzl
projects/cityhash/: BUILD.bazel  project.bzl
projects/cjson/: BUILD.bazel  project.bzl
projects/cli11/: BUILD.bazel  project.bzl
projects/copybara/: BUILD.bazel  project.bzl
projects/cpp-httplib/: BUILD.bazel  project.bzl
projects/cpptrace/: BUILD.bazel  project.bzl
projects/cpu_features/: BUILD.bazel  project.bzl
projects/crow/: BUILD.bazel  project.bzl
projects/cucumber-cpp/: BUILD.bazel  project.bzl
projects/curl/: BUILD.bazel  project.bzl
projects/cxx/: BUILD.bazel  project.bzl
projects/cxxurl/: project.bzl
projects/directxmath/: BUILD.bazel  project.bzl
projects/doctest/: BUILD.bazel  project.bzl
projects/double_conversion/: BUILD.bazel  project.bzl
projects/effcee/: project.bzl
projects/exprtk/: project.bzl
projects/fast_float/: BUILD.bazel  project.bzl
projects/fftw/: project.bzl
projects/flatbuffers/: BUILD.bazel  project.bzl
projects/flex/: BUILD.bazel  project.bzl
projects/ftxui/: BUILD.bazel  project.bzl
projects/fuzztest/: BUILD.bazel  project.bzl
projects/fzf/: BUILD.bazel  project.bzl
projects/gflags/: BUILD.bazel  project.bzl
projects/glm/: BUILD.bazel  project.bzl
projects/glog/: BUILD.bazel  project.bzl
projects/go_jsonnet/: BUILD.bazel  project.bzl
projects/googletest/: BUILD.bazel  project.bzl
projects/gperftools/: BUILD.bazel  project.bzl
projects/grpc/: BUILD.bazel  project.bzl
projects/grpc_gateway/: BUILD.bazel  project.bzl
projects/gsl-lite/: project.bzl
projects/hfsm2/: BUILD.bazel  project.bzl
projects/highs/: BUILD.bazel  project.bzl
projects/highway/: BUILD.bazel  project.bzl
projects/iceoryx/: BUILD.bazel
projects/iceoryx2/: BUILD.bazel  project.bzl
projects/icu/: project.bzl
projects/iperf/: BUILD.bazel  project.bzl
projects/iverilog/: project.bzl
projects/json/: BUILD.bazel  project.bzl
projects/jsoncpp/: BUILD.bazel  platforms.MODULE.bazel  project.bzl
projects/jsonnet/: BUILD.bazel  project.bzl
projects/lcm/: BUILD.bazel  project.bzl
projects/lexbor/: BUILD.bazel  project.bzl
projects/lexy/: BUILD.bazel  project.bzl
projects/libavif/: BUILD.bazel  project.bzl
projects/libcreate/: project.bzl
projects/libde265/: BUILD.bazel  project.bzl
projects/libdwarf/: BUILD.bazel  project.bzl
projects/libevent/: BUILD.bazel  project.bzl
projects/libfastjson/: BUILD.bazel  project.bzl
projects/libgd/: BUILD.bazel  project.bzl
projects/libgit2/: BUILD.bazel  project.bzl
projects/libheif/: BUILD.bazel  project.bzl
projects/libpcap/: BUILD.bazel  project.bzl
projects/libwebsockets/: project.bzl
projects/llvm-project/: BUILD.bazel  project.bzl
projects/magic_enum/: BUILD.bazel  project.bzl
projects/marisa-trie/: BUILD.bazel  project.bzl
projects/nsync/: BUILD.bazel  project.bzl
projects/ogg/: BUILD.bazel  project.bzl
projects/onetbb/: BUILD.bazel  project.bzl
projects/opencc/: BUILD.bazel  project.bzl
projects/openexr/: BUILD.bazel  (+1 more)
(+276 files in other folders)
