# Root sweep targets.
#
# `local_*` and `rbe_*` exclude heavyweight projects by default. Use
# `large_*` for the heavyweight set, or `all_*` for both regular and
# heavyweight projects.
LARGE_PROJECTS = [
    "bazel",
    "llvm-project",
    "rocksdb",
]

BUILD_PACKAGES = [
    "abseil_cpp",
    "abseil_cpp/hermetic_llvm",
    "abseil_py",
    "aravis",
    "avro-cpp",
    "basis_universal",
    "bazel",
    "behaviortree_cpp",
    "benchmark",
    "benchmark/hermetic_llvm",
    "boringssl",
    "briansmith_ring",
    "brotli",
    "brotli_go",
    "buildtools",
    "c-blosc2",
    "catch2",
    "ccronexpr",
    "cctz",
    "cctz/hermetic_llvm",
    "cityhash",
    "cjson",
    "cli11",
    "copybara",
    "cpp-httplib",
    "cpptrace",
    "cpu_features",
    "cpu_features/hermetic_llvm",
    "crow",
    "cucumber-cpp",
    "curl",
    "cxx",
    "cxxurl",
    "directxmath",
    "doctest",
    "double_conversion",
    "effcee",
    "exprtk",
    "fast_float",
    "fftw",
    "flatbuffers",
    "flatbuffers/hermetic_llvm",
    "flex",
    "ftxui",
    "ftxui/hermetic_llvm",
    "fuzztest",
    "fuzztest/hermetic_llvm",
    "fzf",
    "gflags",
    "glm",
    "glog",
    "go_jsonnet",
    "googletest",
    "googletest/hermetic_llvm",
    "gperftools",
    "gperftools/hermetic_llvm",
    "grpc",
    "grpc_gateway",
    "gsl-lite",
    "hfsm2",
    "highs",
    "highway",
    "highway/hermetic_llvm",
    "iceoryx2",
    "icu",
    "iperf",
    "iverilog",
    "json",
    "jsoncpp",
    "jsonnet",
    "lcm",
    "lcm/hermetic_llvm",
    "lexbor",
    "lexy",
    "libavif",
    "libcreate",
    "libde265",
    "libdwarf",
    "libevent",
    "libfastjson",
    "libgd",
    "libgit2",
    "libheif",
    "libpcap",
    "libwebsockets",
    "llvm-project",
    "magic_enum",
    "marisa-trie",
    "nsync",
    "nsync/hermetic_llvm",
    "ogg",
    "onetbb",
    "onetbb/hermetic_llvm",
    "opencc",
    "opencc/hermetic_llvm",
    "opencl-sdk",
    "openexr",
    "openexr/hermetic_llvm",
    "openssl",
    "opentelemetry_cpp",
    "ortools",
    "pcre2",
    "pcre2/hermetic_llvm",
    "prometheus_cpp",
    "prometheus_cpp/hermetic_llvm",
    "protobuf",
    "protobuf/hermetic_llvm",
    "quill",
    "quill/hermetic_llvm",
    "re2",
    "re2/hermetic_llvm",
    "reflexxes-rmltype2",
    "rocksdb",
    "rsyslog",
    "rules_multirun",
    "s2geometry",
    "s2geometry/hermetic_llvm",
    "sdl2",
    "sdl2_mixer",
    "simdutf",
    "snappy",
    "snappy/hermetic_llvm",
    "squashfs-tools",
    "systemc",
    "tinyformat",
    "tinyxml2",
    "tomlplusplus",
    "trlc",
    "universal-robots-client-library",
    "verible",
    "verible/hermetic_llvm",
    "verilator",
    "xkbcommon",
    "z3",
    "zlib",
    "zlib/hermetic_llvm",
    "zstd",
    "zziplib",
]

TEST_PACKAGES = [
    "abseil_cpp",
    "abseil_cpp/hermetic_llvm",
    "abseil_py",
    "aravis",
    "avro-cpp",
    "basis_universal",
    "bazel",
    "behaviortree_cpp",
    "benchmark",
    "benchmark/hermetic_llvm",
    "boringssl",
    "briansmith_ring",
    "brotli_go",
    "buildtools",
    "c-blosc2",
    "catch2",
    "ccronexpr",
    "cctz",
    "cctz/hermetic_llvm",
    "cityhash",
    "cjson",
    "cli11",
    "copybara",
    "cpp-httplib",
    "cpptrace",
    "cpu_features",
    "cpu_features/hermetic_llvm",
    "crow",
    "cucumber-cpp",
    "curl",
    "cxx",
    "cxxurl",
    "directxmath",
    "doctest",
    "double_conversion",
    "effcee",
    "exprtk",
    "fast_float",
    "fftw",
    "flatbuffers",
    "flatbuffers/hermetic_llvm",
    "flex",
    "ftxui",
    "ftxui/hermetic_llvm",
    "fuzztest",
    "fuzztest/hermetic_llvm",
    "fzf",
    "glm",
    "glog",
    "go_jsonnet",
    "googletest",
    "googletest/hermetic_llvm",
    "gperftools",
    "gperftools/hermetic_llvm",
    "grpc",
    "grpc_gateway",
    "gsl-lite",
    "hfsm2",
    "highs",
    "highway",
    "highway/hermetic_llvm",
    "iceoryx2",
    "icu",
    "iperf",
    "iverilog",
    "jsoncpp",
    "jsonnet",
    "lcm",
    "lcm/hermetic_llvm",
    "lexbor",
    "lexy",
    "libavif",
    "libcreate",
    "libde265",
    "libdwarf",
    "libevent",
    "libfastjson",
    "libgd",
    "libgit2",
    "libheif",
    "libpcap",
    "libwebsockets",
    "llvm-project",
    "magic_enum",
    "marisa-trie",
    "nsync",
    "nsync/hermetic_llvm",
    "ogg",
    "onetbb",
    "onetbb/hermetic_llvm",
    "opencc",
    "opencc/hermetic_llvm",
    "opencl-sdk",
    "openexr",
    "openexr/hermetic_llvm",
    "openssl",
    "opentelemetry_cpp",
    "ortools",
    "pcre2",
    "pcre2/hermetic_llvm",
    "prometheus_cpp",
    "prometheus_cpp/hermetic_llvm",
    "protobuf",
    "protobuf/hermetic_llvm",
    "re2",
    "re2/hermetic_llvm",
    "reflexxes-rmltype2",
    "rocksdb",
    "rsyslog",
    "rules_multirun",
    "s2geometry",
    "s2geometry/hermetic_llvm",
    "sdl2",
    "sdl2_mixer",
    "simdutf",
    "snappy",
    "snappy/hermetic_llvm",
    "squashfs-tools",
    "systemc",
    "tinyformat",
    "tinyxml2",
    "tomlplusplus",
    "trlc",
    "universal-robots-client-library",
    "verible",
    "verible/hermetic_llvm",
    "verilator",
    "xkbcommon",
    "zstd",
    "zziplib",
]

REGULAR_BUILD_PACKAGES = [package for package in BUILD_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_BUILD_PACKAGES = [package for package in BUILD_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_TEST_PACKAGES = [package for package in TEST_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_TEST_PACKAGES = [package for package in TEST_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]

LOCAL_BUILDS = ["//projects/%s:kiss_build" % package for package in REGULAR_BUILD_PACKAGES]
LARGE_LOCAL_BUILDS = ["//projects/%s:kiss_build" % package for package in LARGE_BUILD_PACKAGES]
RBE_BUILDS = ["//projects/%s:kiss_rbe_build" % package for package in REGULAR_BUILD_PACKAGES]
LARGE_RBE_BUILDS = ["//projects/%s:kiss_rbe_build" % package for package in LARGE_BUILD_PACKAGES]
LOCAL_TESTS = ["//projects/%s:kiss_test" % package for package in REGULAR_TEST_PACKAGES]
LARGE_LOCAL_TESTS = ["//projects/%s:kiss_test" % package for package in LARGE_TEST_PACKAGES]
RBE_TESTS = ["//projects/%s:kiss_rbe_test" % package for package in REGULAR_TEST_PACKAGES]
LARGE_RBE_TESTS = ["//projects/%s:kiss_rbe_test" % package for package in LARGE_TEST_PACKAGES]

filegroup(
    name = "local_builds",
    srcs = LOCAL_BUILDS,
)

filegroup(
    name = "large_local_builds",
    srcs = LARGE_LOCAL_BUILDS,
)

filegroup(
    name = "all_local_builds",
    srcs = [
        ":local_builds",
        ":large_local_builds",
    ],
)

filegroup(
    name = "rbe_builds",
    srcs = RBE_BUILDS,
)

filegroup(
    name = "large_rbe_builds",
    srcs = LARGE_RBE_BUILDS,
)

filegroup(
    name = "all_rbe_builds",
    srcs = [
        ":rbe_builds",
        ":large_rbe_builds",
    ],
)

test_suite(
    name = "local_tests",
    tests = LOCAL_TESTS,
)

test_suite(
    name = "large_local_tests",
    tests = LARGE_LOCAL_TESTS,
)

test_suite(
    name = "all_local_tests",
    tests = [
        ":local_tests",
        ":large_local_tests",
    ],
)

test_suite(
    name = "rbe_tests",
    tests = RBE_TESTS,
)

test_suite(
    name = "large_rbe_tests",
    tests = LARGE_RBE_TESTS,
)

test_suite(
    name = "all_rbe_tests",
    tests = [
        ":rbe_tests",
        ":large_rbe_tests",
    ],
)
