# Root sweep targets.
#
# Root sweep names use project / variant / environment / command. Non-`all_*`
# targets exclude heavyweight projects by default; `all_*` includes both regular
# and heavyweight projects for the same variant/environment/command.
LARGE_PROJECTS = [
    "bazel",
    "llvm-project",
    "rocksdb",
]

BUILD_PACKAGES = [
    "abseil_cpp/as_is",
    "abseil_cpp/hermetic_llvm",
    "abseil_py/as_is",
    "aravis/as_is",
    "avro-cpp/as_is",
    "basis_universal/as_is",
    "bazel/as_is",
    "behaviortree_cpp/as_is",
    "benchmark/as_is",
    "benchmark/hermetic_llvm",
    "boringssl/as_is",
    "briansmith_ring/as_is",
    "brotli/as_is",
    "brotli_go/as_is",
    "buildtools/as_is",
    "c-blosc2/as_is",
    "catch2/as_is",
    "ccronexpr/as_is",
    "cctz/as_is",
    "cctz/hermetic_llvm",
    "cityhash/as_is",
    "cjson/as_is",
    "cli11/as_is",
    "copybara/as_is",
    "cpp-httplib/as_is",
    "cpptrace/as_is",
    "cpu_features/as_is",
    "cpu_features/hermetic_llvm",
    "crow/as_is",
    "cucumber-cpp/as_is",
    "curl/as_is",
    "cxx/as_is",
    "cxxurl/as_is",
    "directxmath/as_is",
    "doctest/as_is",
    "double_conversion/as_is",
    "effcee/as_is",
    "exprtk/as_is",
    "fast_float/as_is",
    "fftw/as_is",
    "flatbuffers/as_is",
    "flatbuffers/hermetic_llvm",
    "flex/as_is",
    "ftxui/as_is",
    "ftxui/hermetic_llvm",
    "fuzztest/as_is",
    "fuzztest/hermetic_llvm",
    "fzf/as_is",
    "gflags/as_is",
    "glm/as_is",
    "glog/as_is",
    "go_jsonnet/as_is",
    "googletest/as_is",
    "googletest/hermetic_llvm",
    "gperftools/as_is",
    "gperftools/hermetic_llvm",
    "grpc/as_is",
    "grpc_gateway/as_is",
    "gsl-lite/as_is",
    "hfsm2/as_is",
    "highs/as_is",
    "highway/as_is",
    "highway/hermetic_llvm",
    "iceoryx2/as_is",
    "icu/as_is",
    "iperf/as_is",
    "iverilog/as_is",
    "json/as_is",
    "jsoncpp/as_is",
    "jsonnet/as_is",
    "lcm/as_is",
    "lcm/hermetic_llvm",
    "lexbor/as_is",
    "lexy/as_is",
    "libavif/as_is",
    "libcreate/as_is",
    "libde265/as_is",
    "libdwarf/as_is",
    "libevent/as_is",
    "libfastjson/as_is",
    "libgd/as_is",
    "libgit2/as_is",
    "libheif/as_is",
    "libpcap/as_is",
    "libwebsockets/as_is",
    "llvm-project/as_is",
    "magic_enum/as_is",
    "marisa-trie/as_is",
    "nsync/as_is",
    "nsync/hermetic_llvm",
    "ogg/as_is",
    "onetbb/as_is",
    "onetbb/hermetic_llvm",
    "opencc/as_is",
    "opencc/hermetic_llvm",
    "opencl-sdk/as_is",
    "openexr/as_is",
    "openexr/hermetic_llvm",
    "openssl/as_is",
    "opentelemetry_cpp/as_is",
    "ortools/as_is",
    "pcre2/as_is",
    "pcre2/hermetic_llvm",
    "prometheus_cpp/as_is",
    "prometheus_cpp/hermetic_llvm",
    "protobuf/as_is",
    "protobuf/hermetic_llvm",
    "quill/as_is",
    "quill/hermetic_llvm",
    "re2/as_is",
    "re2/hermetic_llvm",
    "reflexxes-rmltype2/as_is",
    "rocksdb/as_is",
    "rsyslog/as_is",
    "rules_multirun/as_is",
    "s2geometry/as_is",
    "s2geometry/hermetic_llvm",
    "sdl2/as_is",
    "sdl2_mixer/as_is",
    "simdutf/as_is",
    "snappy/as_is",
    "snappy/hermetic_llvm",
    "squashfs-tools/as_is",
    "systemc/as_is",
    "tinyformat/as_is",
    "tinyxml2/as_is",
    "tomlplusplus/as_is",
    "trlc/as_is",
    "universal-robots-client-library/as_is",
    "verible/as_is",
    "verible/hermetic_llvm",
    "verilator/as_is",
    "xkbcommon/as_is",
    "z3/as_is",
    "zlib/as_is",
    "zlib/hermetic_llvm",
    "zstd/as_is",
    "zziplib/as_is",
]

TEST_PACKAGES = [
    "abseil_cpp/as_is",
    "abseil_cpp/hermetic_llvm",
    "abseil_py/as_is",
    "aravis/as_is",
    "avro-cpp/as_is",
    "basis_universal/as_is",
    "bazel/as_is",
    "behaviortree_cpp/as_is",
    "benchmark/as_is",
    "benchmark/hermetic_llvm",
    "boringssl/as_is",
    "briansmith_ring/as_is",
    "brotli_go/as_is",
    "buildtools/as_is",
    "c-blosc2/as_is",
    "catch2/as_is",
    "ccronexpr/as_is",
    "cctz/as_is",
    "cctz/hermetic_llvm",
    "cityhash/as_is",
    "cjson/as_is",
    "cli11/as_is",
    "copybara/as_is",
    "cpp-httplib/as_is",
    "cpptrace/as_is",
    "cpu_features/as_is",
    "cpu_features/hermetic_llvm",
    "crow/as_is",
    "cucumber-cpp/as_is",
    "curl/as_is",
    "cxx/as_is",
    "cxxurl/as_is",
    "directxmath/as_is",
    "doctest/as_is",
    "double_conversion/as_is",
    "effcee/as_is",
    "exprtk/as_is",
    "fast_float/as_is",
    "fftw/as_is",
    "flatbuffers/as_is",
    "flatbuffers/hermetic_llvm",
    "flex/as_is",
    "ftxui/as_is",
    "ftxui/hermetic_llvm",
    "fuzztest/as_is",
    "fuzztest/hermetic_llvm",
    "fzf/as_is",
    "glm/as_is",
    "glog/as_is",
    "go_jsonnet/as_is",
    "googletest/as_is",
    "googletest/hermetic_llvm",
    "gperftools/as_is",
    "gperftools/hermetic_llvm",
    "grpc/as_is",
    "grpc_gateway/as_is",
    "gsl-lite/as_is",
    "hfsm2/as_is",
    "highs/as_is",
    "highway/as_is",
    "highway/hermetic_llvm",
    "iceoryx2/as_is",
    "icu/as_is",
    "iperf/as_is",
    "iverilog/as_is",
    "jsoncpp/as_is",
    "jsonnet/as_is",
    "lcm/as_is",
    "lcm/hermetic_llvm",
    "lexbor/as_is",
    "lexy/as_is",
    "libavif/as_is",
    "libcreate/as_is",
    "libde265/as_is",
    "libdwarf/as_is",
    "libevent/as_is",
    "libfastjson/as_is",
    "libgd/as_is",
    "libgit2/as_is",
    "libheif/as_is",
    "libpcap/as_is",
    "libwebsockets/as_is",
    "llvm-project/as_is",
    "magic_enum/as_is",
    "marisa-trie/as_is",
    "nsync/as_is",
    "nsync/hermetic_llvm",
    "ogg/as_is",
    "onetbb/as_is",
    "onetbb/hermetic_llvm",
    "opencc/as_is",
    "opencc/hermetic_llvm",
    "opencl-sdk/as_is",
    "openexr/as_is",
    "openexr/hermetic_llvm",
    "openssl/as_is",
    "opentelemetry_cpp/as_is",
    "ortools/as_is",
    "pcre2/as_is",
    "pcre2/hermetic_llvm",
    "prometheus_cpp/as_is",
    "prometheus_cpp/hermetic_llvm",
    "protobuf/as_is",
    "protobuf/hermetic_llvm",
    "re2/as_is",
    "re2/hermetic_llvm",
    "reflexxes-rmltype2/as_is",
    "rocksdb/as_is",
    "rsyslog/as_is",
    "rules_multirun/as_is",
    "s2geometry/as_is",
    "s2geometry/hermetic_llvm",
    "sdl2/as_is",
    "sdl2_mixer/as_is",
    "simdutf/as_is",
    "snappy/as_is",
    "snappy/hermetic_llvm",
    "squashfs-tools/as_is",
    "systemc/as_is",
    "tinyformat/as_is",
    "tinyxml2/as_is",
    "tomlplusplus/as_is",
    "trlc/as_is",
    "universal-robots-client-library/as_is",
    "verible/as_is",
    "verible/hermetic_llvm",
    "verilator/as_is",
    "xkbcommon/as_is",
    "zstd/as_is",
    "zziplib/as_is",
]

AS_IS_BUILD_PACKAGES = [package for package in BUILD_PACKAGES if package.endswith("/as_is")]
HERMETIC_LLVM_BUILD_PACKAGES = [package for package in BUILD_PACKAGES if package.endswith("/hermetic_llvm")]
AS_IS_TEST_PACKAGES = [package for package in TEST_PACKAGES if package.endswith("/as_is")]
HERMETIC_LLVM_TEST_PACKAGES = [package for package in TEST_PACKAGES if package.endswith("/hermetic_llvm")]

SMOKE_AS_IS_PACKAGES = [
    "abseil_py/as_is",
    "glm/as_is",
    "re2/as_is",
    "simdutf/as_is",
    "tinyxml2/as_is",
]

REGULAR_AS_IS_BUILD_PACKAGES = [package for package in AS_IS_BUILD_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_AS_IS_BUILD_PACKAGES = [package for package in AS_IS_BUILD_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_HERMETIC_LLVM_BUILD_PACKAGES = [package for package in HERMETIC_LLVM_BUILD_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_HERMETIC_LLVM_BUILD_PACKAGES = [package for package in HERMETIC_LLVM_BUILD_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_AS_IS_TEST_PACKAGES = [package for package in AS_IS_TEST_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_AS_IS_TEST_PACKAGES = [package for package in AS_IS_TEST_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]
REGULAR_HERMETIC_LLVM_TEST_PACKAGES = [package for package in HERMETIC_LLVM_TEST_PACKAGES if package.split("/")[0] not in LARGE_PROJECTS]
LARGE_HERMETIC_LLVM_TEST_PACKAGES = [package for package in HERMETIC_LLVM_TEST_PACKAGES if package.split("/")[0] in LARGE_PROJECTS]

AS_IS_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_BUILD_PACKAGES]
LARGE_AS_IS_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in LARGE_AS_IS_BUILD_PACKAGES]
HERMETIC_LLVM_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_BUILD_PACKAGES]
LARGE_HERMETIC_LLVM_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_BUILD_PACKAGES]
AS_IS_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_BUILD_PACKAGES]
LARGE_AS_IS_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in LARGE_AS_IS_BUILD_PACKAGES]
HERMETIC_LLVM_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_BUILD_PACKAGES]
LARGE_HERMETIC_LLVM_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_BUILD_PACKAGES]
AS_IS_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_TEST_PACKAGES]
LARGE_AS_IS_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in LARGE_AS_IS_TEST_PACKAGES]
HERMETIC_LLVM_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_TEST_PACKAGES]
LARGE_HERMETIC_LLVM_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_TEST_PACKAGES]
AS_IS_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in REGULAR_AS_IS_TEST_PACKAGES]
LARGE_AS_IS_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in LARGE_AS_IS_TEST_PACKAGES]
HERMETIC_LLVM_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in REGULAR_HERMETIC_LLVM_TEST_PACKAGES]
LARGE_HERMETIC_LLVM_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in LARGE_HERMETIC_LLVM_TEST_PACKAGES]
SMOKE_AS_IS_LOCAL_BUILDS = ["//projects/%s:%s_local_build" % (package, package.split("/")[0]) for package in SMOKE_AS_IS_PACKAGES]
SMOKE_AS_IS_RBE_BUILDS = ["//projects/%s:%s_rbe_build" % (package, package.split("/")[0]) for package in SMOKE_AS_IS_PACKAGES]
SMOKE_AS_IS_LOCAL_TESTS = ["//projects/%s:%s_local_test" % (package, package.split("/")[0]) for package in SMOKE_AS_IS_PACKAGES]
SMOKE_AS_IS_RBE_TESTS = ["//projects/%s:%s_rbe_test" % (package, package.split("/")[0]) for package in SMOKE_AS_IS_PACKAGES]

filegroup(
    name = "smoke_as_is_local_builds",
    srcs = SMOKE_AS_IS_LOCAL_BUILDS,
)

filegroup(
    name = "smoke_as_is_rbe_builds",
    srcs = SMOKE_AS_IS_RBE_BUILDS,
)

test_suite(
    name = "smoke_as_is_local_tests",
    tests = SMOKE_AS_IS_LOCAL_TESTS,
)

test_suite(
    name = "smoke_as_is_rbe_tests",
    tests = SMOKE_AS_IS_RBE_TESTS,
)

filegroup(
    name = "as_is_local_builds",
    srcs = AS_IS_LOCAL_BUILDS,
)

filegroup(
    name = "large_as_is_local_builds",
    srcs = LARGE_AS_IS_LOCAL_BUILDS,
)

filegroup(
    name = "all_as_is_local_builds",
    srcs = [
        ":as_is_local_builds",
        ":large_as_is_local_builds",
    ],
)

filegroup(
    name = "hermetic_llvm_local_builds",
    srcs = HERMETIC_LLVM_LOCAL_BUILDS,
)

filegroup(
    name = "large_hermetic_llvm_local_builds",
    srcs = LARGE_HERMETIC_LLVM_LOCAL_BUILDS,
)

filegroup(
    name = "all_hermetic_llvm_local_builds",
    srcs = [
        ":hermetic_llvm_local_builds",
        ":large_hermetic_llvm_local_builds",
    ],
)

filegroup(
    name = "as_is_rbe_builds",
    srcs = AS_IS_RBE_BUILDS,
)

filegroup(
    name = "large_as_is_rbe_builds",
    srcs = LARGE_AS_IS_RBE_BUILDS,
)

filegroup(
    name = "hermetic_llvm_rbe_builds",
    srcs = HERMETIC_LLVM_RBE_BUILDS,
)

filegroup(
    name = "large_hermetic_llvm_rbe_builds",
    srcs = LARGE_HERMETIC_LLVM_RBE_BUILDS,
)

filegroup(
    name = "all_hermetic_llvm_rbe_builds",
    srcs = [
        ":hermetic_llvm_rbe_builds",
        ":large_hermetic_llvm_rbe_builds",
    ],
)

filegroup(
    name = "all_as_is_rbe_builds",
    srcs = [
        ":as_is_rbe_builds",
        ":large_as_is_rbe_builds",
    ],
)

test_suite(
    name = "as_is_local_tests",
    tests = AS_IS_LOCAL_TESTS,
)

test_suite(
    name = "large_as_is_local_tests",
    tests = LARGE_AS_IS_LOCAL_TESTS,
)

test_suite(
    name = "all_as_is_local_tests",
    tests = [
        ":as_is_local_tests",
        ":large_as_is_local_tests",
    ],
)

test_suite(
    name = "hermetic_llvm_local_tests",
    tests = HERMETIC_LLVM_LOCAL_TESTS,
)

test_suite(
    name = "large_hermetic_llvm_local_tests",
    tests = LARGE_HERMETIC_LLVM_LOCAL_TESTS,
)

test_suite(
    name = "all_hermetic_llvm_local_tests",
    tests = [
        ":hermetic_llvm_local_tests",
        ":large_hermetic_llvm_local_tests",
    ],
)

test_suite(
    name = "as_is_rbe_tests",
    tests = AS_IS_RBE_TESTS,
)

test_suite(
    name = "large_as_is_rbe_tests",
    tests = LARGE_AS_IS_RBE_TESTS,
)

test_suite(
    name = "hermetic_llvm_rbe_tests",
    tests = HERMETIC_LLVM_RBE_TESTS,
)

test_suite(
    name = "large_hermetic_llvm_rbe_tests",
    tests = LARGE_HERMETIC_LLVM_RBE_TESTS,
)

test_suite(
    name = "all_hermetic_llvm_rbe_tests",
    tests = [
        ":hermetic_llvm_rbe_tests",
        ":large_hermetic_llvm_rbe_tests",
    ],
)

test_suite(
    name = "all_as_is_rbe_tests",
    tests = [
        ":as_is_rbe_tests",
        ":large_as_is_rbe_tests",
    ],
)
