"""Bazel Museum: a collection of reproducible Bazel builds of public projects.

This module hosts (1) a data pipeline that discovers public projects building
with Bazel, (2) tooling to run Bazel builds in isolation, and (3) the build
collection itself. See docs/ for the design.
"""

module(
    name = "bazel_museum",
    version = "0.0.0",
)

# --- External dependencies -------------------------------------------------

bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "platforms", version = "1.0.0")

# For building the hermetic `zip` tool (//tools/zip) from Info-ZIP source. We
# build it with the same hermetic LLVM toolchain the inner builds use, so the
# museum needs no host C compiler and no host `zip` — registered here, it's the
# default C++ toolchain for the (only) C target in this module, the zip CLI.
# Lazy: @llvm is only fetched/built when a C++ target is actually built.
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "llvm", version = "0.8.9")
register_toolchains("@llvm//toolchain:all")

infozip = use_extension("//tools/zip:extension.bzl", "infozip")
use_repo(infozip, "infozip")

# Hermetic Python toolchain so the pipeline runs the same everywhere.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

# Hermetic `gh` CLI, downloaded and pinned (see //tools/gh:extension.bzl).
# Used by the pipeline to enrich project metadata (stars, archived, etc.).
gh = use_extension("//tools/gh:extension.bzl", "gh_extension")
use_repo(
    gh,
    "gh_cli_linux_amd64",
    "gh_cli_linux_arm64",
    "gh_cli_darwin_amd64",
    "gh_cli_darwin_arm64",
)

# Hermetic Bazel binary used to run the *inner* project builds in isolation,
# and pinned source archives of the museum's projects (see //tools/fetch).
inner_bazel = use_extension("//tools/fetch:extension.bzl", "inner_bazel")
use_repo(
    inner_bazel,
    # Bazel 9.1.1 (default inner).
    "inner_bazel_9_1_1_linux_amd64",
    "inner_bazel_9_1_1_linux_arm64",
    "inner_bazel_9_1_1_darwin_amd64",
    "inner_bazel_9_1_1_darwin_arm64",
    # Bazel 8.7.0 (for projects that target Bazel 8, e.g. grpc; late enough to
    # have repo_metadata so hermetic-llvm runs).
    "inner_bazel_8_7_0_linux_amd64",
    "inner_bazel_8_7_0_linux_arm64",
    "inner_bazel_8_7_0_darwin_amd64",
    "inner_bazel_8_7_0_darwin_arm64",
)

project_sources = use_extension("//tools/fetch:extension.bzl", "project_sources")
use_repo(
    project_sources,
    "absl_archive",
    "copybara_archive",
    "cxx_archive",
    "protobuf_archive",
    "grpc_archive",
    "googletest_archive",
    "json_archive",
    "flatbuffers_archive",
    "catch2_archive",
    "ortools_archive",
    "brotli_archive",
    "bazel_archive",
)

# Hermetic `actiond` worker binary (see //tools/actiond:extension.bzl). actiond
# is the local Linux RE worker behind the ACTIOND environment: it runs the
# museum's projects for linux/arm64 inside a VM on this host. `bazel run
# //tools/actiond:serve` boots it.
actiond = use_extension("//tools/actiond:extension.bzl", "actiond")
use_repo(
    actiond,
    "actiond_darwin_arm64",
    "actiond_linux_arm64",
    "actiond_linux_amd64",
)
