"""Bazel Museum: KISS Bazel builds of public projects."""

module(
    name = "bazel_museum",
    version = "0.0.0",
)

# --- External dependencies -------------------------------------------------

bazel_dep(name = "rules_python", version = "2.0.3")
bazel_dep(name = "platforms", version = "1.1.0")

# Hermetic Python toolchain so the KISS tests run the same everywhere.
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    is_default = True,
    python_version = "3.12",
)

# Hermetic Bazel binary used to run the *inner* project builds in isolation,
# and pinned source archives of the museum's projects.
inner_bazel = use_extension("//kiss:extension.bzl", "inner_bazel")
use_repo(
    inner_bazel,
    # Bazel 9.1.1 (default inner).
    "inner_bazel_9_1_1_darwin_amd64",
    "inner_bazel_9_1_1_darwin_arm64",
    "inner_bazel_9_1_1_linux_amd64",
    "inner_bazel_9_1_1_linux_arm64",
    # Bazel 8.7.0 (for projects that target Bazel 8, e.g. grpc; late enough to
    # have repo_metadata so hermetic-llvm runs).
    "inner_bazel_8_7_0_darwin_amd64",
    "inner_bazel_8_7_0_darwin_arm64",
    "inner_bazel_8_7_0_linux_amd64",
    "inner_bazel_8_7_0_linux_arm64",
)

project_sources = use_extension("//kiss:extension.bzl", "project_sources")
use_repo(
    project_sources,
    "abseil_py_archive",
    "absl_archive",
    "bazel_archive",
    "benchmark_archive",
    "boringssl_archive",
    "brotli_archive",
    "buildtools_archive",
    "catch2_archive",
    "cctz_archive",
    "cli11_archive",
    "copybara_archive",
    "cpptrace_archive",
    "cpu_features_archive",
    "crow_archive",
    "cxx_archive",
    "doctest_archive",
    "double_conversion_archive",
    "fast_float_archive",
    "flatbuffers_archive",
    "ftxui_archive",
    "fuzztest_archive",
    "gflags_archive",
    "glog_archive",
    "go_jsonnet_archive",
    "googletest_archive",
    "gperftools_archive",
    "grpc_archive",
    "grpc_gateway_archive",
    "highs_archive",
    "highway_archive",
    "iceoryx2_archive",
    "json_archive",
    "jsoncpp_archive",
    "jsonnet_archive",
    "lcm_archive",
    "magic_enum_archive",
    "nsync_archive",
    "onetbb_archive",
    "opencc_archive",
    "openexr_archive",
    "opentelemetry_cpp_archive",
    "ortools_archive",
    "pcre2_archive",
    "prometheus_cpp_archive",
    "protobuf_archive",
    "quill_archive",
    "re2_archive",
    "s2geometry_archive",
    "snappy_archive",
    "verible_archive",
    "z3_archive",
    "zlib_archive",
)
