load("@rules_python//python:defs.bzl", "py_binary")

exports_files(["hermetic_llvm.MODULE.bazel", "bazel_runner.py", "zip.py"])

py_binary(
    name = "bazel_runner",
    srcs = ["bazel_runner.py"],
    main = "bazel_runner.py",
)

# OS+CPU config settings used by bazel_runner rules to pick the matching pinned inner
# Bazel binary.
[
    config_setting(
        name = name,
        constraint_values = constraints,
    )
    for name, constraints in {
        "linux_amd64": ["@platforms//os:linux", "@platforms//cpu:x86_64"],
        "linux_arm64": ["@platforms//os:linux", "@platforms//cpu:arm64"],
        "darwin_amd64": ["@platforms//os:osx", "@platforms//cpu:x86_64"],
        "darwin_arm64": ["@platforms//os:osx", "@platforms//cpu:arm64"],
    }.items()
]
