load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "lib",
    srcs = [
        "__init__.py",
        "classify.py",
        "github.py",
        "model.py",
        "netfetch.py",
        "sources/__init__.py",
        "sources/bcr.py",
        "sources/jin.py",
        "sources/nicolov.py",
    ],
    deps = ["@rules_python//python/runfiles"],
)

py_binary(
    name = "gather",
    srcs = ["gather.py"],
    # Bundle the hermetic gh binary for the target platform, and tell the tool
    # where to find it in runfiles via $(rlocationpath).
    args = select({
        "@platforms//cpu:x86_64": ["--gh-rlocation=$(rlocationpath @gh_cli_linux_amd64//:gh)"],
        "@platforms//cpu:arm64": ["--gh-rlocation=$(rlocationpath @gh_cli_linux_arm64//:gh)"],
    }),
    data = select({
        "@platforms//cpu:x86_64": ["@gh_cli_linux_amd64//:gh"],
        "@platforms//cpu:arm64": ["@gh_cli_linux_arm64//:gh"],
    }),
    deps = [":lib"],
)
