load("@rules_python//python:defs.bzl", "py_binary", "py_library")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "lib",
    srcs = [
        "__init__.py",
        "classify.py",
        "github.py",
        "model.py",
        "netfetch.py",
        "sources/__init__.py",
        "sources/bcr.py",
        "sources/jin.py",
        "sources/nicolov.py",
    ],
    deps = ["@rules_python//python/runfiles"],
)

py_binary(
    name = "gather",
    srcs = ["gather.py"],
    # Bundle the hermetic gh binary for the target platform, and tell the tool
    # where to find it in runfiles via $(rlocationpath).
    # Key on os+cpu (config settings from //builds) so macOS hosts pick the
    # darwin gh binary rather than wrongly matching the linux arm64 one.
    args = select({
        "//builds:linux_amd64": ["--gh-rlocation=$(rlocationpath @gh_cli_linux_amd64//:gh)"],
        "//builds:linux_arm64": ["--gh-rlocation=$(rlocationpath @gh_cli_linux_arm64//:gh)"],
        "//builds:darwin_amd64": ["--gh-rlocation=$(rlocationpath @gh_cli_darwin_amd64//:gh)"],
        "//builds:darwin_arm64": ["--gh-rlocation=$(rlocationpath @gh_cli_darwin_arm64//:gh)"],
    }),
    data = select({
        "//builds:linux_amd64": ["@gh_cli_linux_amd64//:gh"],
        "//builds:linux_arm64": ["@gh_cli_linux_arm64//:gh"],
        "//builds:darwin_amd64": ["@gh_cli_darwin_amd64//:gh"],
        "//builds:darwin_arm64": ["@gh_cli_darwin_arm64//:gh"],
    }),
    deps = [":lib"],
)
