load("//builds:defs.bzl", "build_spec", "museum_project", "test_spec")
load("//builds:environments.bzl", "LOCAL", "RBE")
load("//builds:overlays.bzl", "HERMETIC_LLVM")

# Abseil's C++ common libraries — the museum's first build.
# Source pinned in //tools/fetch:extension.bzl (@absl_archive, release
# 20260526.0). Built with the fully-hermetic LLVM toolchain (no host gcc).
#
#   bazel run //builds/abseil_cpp:build_local_darwin_arm64
#   bazel run //builds/abseil_cpp:test_rbe_linux_amd64
#   bazel run //builds/abseil_cpp:build_local_darwin_arm64 -- //absl/strings:strings
museum_project(
    name = "abseil_cpp",
    source_archive = "@absl_archive//file",
    strip_prefix = "abseil-cpp-20260526.0",
    toolchains = [HERMETIC_LLVM],
    environments = [LOCAL, RBE],
    build = build_spec(targets = ["//absl/..."], flags = ["-c", "opt"]),
    test = test_spec(
        targets = ["//absl/..."],
        # The cctz/time tests read the system timezone database
        # (/usr/share/zoneinfo), which the RBE executor image doesn't ship and
        # which isn't a Bazel-tracked input — so they're excluded under rbe (the
        # local goals still run them). A hermetic tzdata input, or a
        # tzdata-bearing executor image, would re-include them.
        exclude_on = {
            "rbe": [
                "//absl/time:time_test",
                "//absl/time/internal/cctz:time_zone_format_test",
                "//absl/time/internal/cctz:time_zone_lookup_test",
            ],
        },
    ),
)
